# ChangeLog for net-nntp/sabnzbd
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*sabnzbd-0.7.12 (23 May 2013)

  23 May 2013; Daniel Rune Jensen (soehest) <daniel@eth0.dk>
  +sabnzbd-0.7.12.ebuild:
  Version bump.

*sabnzbd-0.7.11 (09 Feb 2013)

  09 Feb 2013; Daniel Rune Jensen (soehest) <daniel@eth0.dk>
  -sabnzbd-0.7.10.ebuild, +sabnzbd-0.7.11.ebuild:
  Version bump.

*sabnzbd-0.7.10 (01 Feb 2013)

  01 Feb 2013; Daniel Rune Jensen (soehest) <daniel@eth0.dk>
  -sabnzbd-0.7.9.ebuild, +sabnzbd-0.7.10.ebuild:
  Version bump.

*sabnzbd-0.7.9 (07 Jan 2013)

  07 Jan 2013; Daniel Rune Jensen (soehest) <daniel@eth0.dk>
  -sabnzbd-0.7.8.ebuild, +sabnzbd-0.7.9.ebuild:
  Version bump.

*sabnzbd-0.7.8 (04 Jan 2013)

  04 Jan 2013; Daniel Rune Jensen (soehest) <daniel@eth0.dk>
  -sabnzbd-0.7.7.ebuild, +sabnzbd-0.7.8.ebuild:
  Version bump.

*sabnzbd-0.7.7 (15 Dec 2012)

  15 Dec 2012; Daniel Rune Jensen (soehest) <daniel@eth0.dk>
  -sabnzbd-0.7.6.ebuild, +sabnzbd-0.7.7.ebuild:
  Version bump.

*sabnzbd-0.7.6 (17 Nov 2012)

  17 Nov 2012; Daniel Rune Jensen (soehest) <daniel@eth0.dk>
  -sabnzbd-0.7.5.ebuild, +sabnzbd-0.7.6.ebuild:
  Version bump.

*sabnzbd-0.7.5 (04 Nov 2012)

  04 Nov 2012; Daniel Rune Jensen (soehest) <daniel@eth0.dk>
  +sabnzbd-0.7.5.ebuild, -sabnzbd-0.7.4.ebuild, -sabnzbd-0.7.3.ebuild:
  Version bump.

*sabnzbd-0.7.4 (05 Oct 2012)

  05 Oct 2012; Daniel Rune Jensen (soehest) <daniel@eth0.dk>
  +sabnzbd-0.7.4.ebuild:
  Version bump.

*sabnzbd-0.7.3 (14 Aug 2012)

  14 Aug 2012; Daniel Rune Jensen (soehest) <daniel@eth0.dk>
  -sabnzbd-0.7.2.ebuild, +sabnzbd-0.7.3.ebuild:
  Version bump. sabnzbd.ini file moved to /etc/sabnzbd/sabnzbd.ini. 
  Sabnzbd runtime directories moved to /var/sabnzbd/ Changes to
  /etc/conf.d/sabnzbd.conf, /etc/init.d/sabnzbd and /etc/sabnzbd.ini.
  Permission fixes.
  
*sabnzbd-0.7.2 (20 Jul 2012)

  20 Jul 2012; Sébastien Picavet (SebastienP) sebastien.picavet@gmail.com