@@ -4,7 +4,9 @@ AUX sabnzbd.init 1213 SHA256 863e2980a815773c4a9b34a720d1ff7dc3bfbff270dff2d7bb1
 AUX sabnzbd.logrotate 177 SHA256 0063c24056a2dfaa48192089451adfc6647bbb201f7c64185ee0f710d29af61a SHA512 52408ccb8b812b9da1e62c9a22ca705a0f4d5d7e194c9ea0637f34e52344372071ac6fbb1055d9cfce8b3264629e6fed9d1a59490fe821d3a1ac08835c4ec146 WHIRLPOOL f2856d569bd0c40acc825621b9546a8d0239a3d3a80052dfe45095cc836a3cb52d3dc9e4e099feb272a4acf657c2f92eb86ac0d062804c83ef4dea1500e5cc1f
 DIST SABnzbd-0.7.11-src.tar.gz 2273355 SHA256 de9c22377e89b081b7c264993c159588acb86206d1b82a465554e2f9df39b311 SHA512 4a56a597652b9587771994e5a57e59fb0d716a36c90d7f4058a05061e5679a7a6a0cfcd16f6d6b673a95fa02f16983755affbb2113f0b9da947303ea6f978bb9 WHIRLPOOL d278f742110f55eaa787c54c455079c46f537540b83362670590855c5697b3c27e31e334d915554db283f6f8c9c88c46bfa7c1f5729caae2a1bc3357b0ed75a4
 DIST SABnzbd-0.7.12-src.tar.gz 2275110 SHA256 9763414af2b3b9eccf933d01dfe5404845aa4b2a5ce6b63c643fc5cb45d2fb9b SHA512 e1d09613146f76fb990aee648c8a61f6eda9473b1e422d4a90b77c6a54adebc25e4fedbbd1d163af5617bac489a75bc84a6b86cf03a80312966cd373e79da028 WHIRLPOOL 17fe329980282ac44b3a87a32fd27369bb560245fc039db4f7c87beed10fab71463adb1e4f13ba72aa3e4dd1e49c81c84c48b587f949df105ca05af1e0fd3c01
+DIST SABnzbd-0.7.13-src.tar.gz 2275234 SHA256 33ebef37e7cdbcc1e3a7436432d7701b3f2584b754176a4d9000ac125e25d690 SHA512 8462e7f39da0e2c829bebca97cbdbb5f6d314e04c408257064d68bf2d17fc37301e53daf695e8db6e5af82d844f6e99fbbed8c500e2bd3d3916a8b3431e1248c WHIRLPOOL cc9c14b6d86108038eee3c934aa1ecc2c95947d8493799b750cf59d1d44f81f5d13cc492fb0f4f8204cd64629e85f707b83b7f971bcb8ef296c65bf28f8bd1eb
 EBUILD sabnzbd-0.7.11.ebuild 2199 SHA256 43ba6fd39b3f90b20fcca42faca1cab428040c3fc9b297728402b4c80b88bb0c SHA512 ef3ff255985b5223a7f46f4cffc9b3e1922af1ef06f61b8fd116c1ffd68615ac021900e0d6dde7b4f0b666e8b9b4c3757c6bd2d79752ab4621062d2b883136fa WHIRLPOOL 786bcf8af08ed0fe9e351c251fe5869f1422db707fffae0b8e412d9cc6d95dd2f4a26ad3340762bc6cdf41edd3a8f23fc94f59e5638898ed9e9d44f53fae939b
 EBUILD sabnzbd-0.7.12.ebuild 2199 SHA256 43ba6fd39b3f90b20fcca42faca1cab428040c3fc9b297728402b4c80b88bb0c SHA512 ef3ff255985b5223a7f46f4cffc9b3e1922af1ef06f61b8fd116c1ffd68615ac021900e0d6dde7b4f0b666e8b9b4c3757c6bd2d79752ab4621062d2b883136fa WHIRLPOOL 786bcf8af08ed0fe9e351c251fe5869f1422db707fffae0b8e412d9cc6d95dd2f4a26ad3340762bc6cdf41edd3a8f23fc94f59e5638898ed9e9d44f53fae939b
-MISC ChangeLog 3254 SHA256 b12c3830da6e3e46e3b52fe38ba38b666f2a51c10a659b44033d8aabef5a2330 SHA512 c1eacf4e815e56751308699861018d1c89ceca95c365de76a8dabb84ffb9e9e84c02bfca7d1934f751361b749f5cef7359fe578e31fc5a267fec166eb739ebbf WHIRLPOOL f3d9ff4e9886955ff15d9313c07f2d8ae2c33020c028abccc87a39e16bc011da7303461c63a13677dc14d46c43bef9c3ee1d911013f59ec8d4642759f312ad03
+EBUILD sabnzbd-0.7.13.ebuild 2199 SHA256 43ba6fd39b3f90b20fcca42faca1cab428040c3fc9b297728402b4c80b88bb0c SHA512 ef3ff255985b5223a7f46f4cffc9b3e1922af1ef06f61b8fd116c1ffd68615ac021900e0d6dde7b4f0b666e8b9b4c3757c6bd2d79752ab4621062d2b883136fa WHIRLPOOL 786bcf8af08ed0fe9e351c251fe5869f1422db707fffae0b8e412d9cc6d95dd2f4a26ad3340762bc6cdf41edd3a8f23fc94f59e5638898ed9e9d44f53fae939b
+MISC ChangeLog 3389 SHA256 d3bf1609f5ed5d36683e8bc0114e94e6360a548066f5d59b3e076ac2309fd244 SHA512 b6784daf5b5a2e086e604d18c9f9a51efd12c330028e16f46f193ae78bcf3f7b148b8c2a02575d9447f6d0af1e6282cdfa8c7200dc934b76af1e5519805bb25e WHIRLPOOL 2375125a59b45d9ae43bc584b9efaab7cfed06bd1b72dba4b7f95a9973db06d7114ff14ce25218ee035498f6dda8a8edbe893a66f141c1aae6662a4988a4d42f
 MISC metadata.xml 354 SHA256 86d085ca453373b20774f1a383d8161ab68e816d04fdf0e592f7978d1f366330 SHA512 af3229b875db9e39376b7e274113430b858533562c9cd2a20a833e845fa835d0bcac2b793c4d7bc56d1fec0674b24f220da9c585009ae0eff173777183ed9e19 WHIRLPOOL 793aad64d70462bac4af754f8c55e42f16356d6912808aa4efeed308cd9f12a72faa5eb2c5b02cc2eae54f796f375b3ccf3c1f3301b77088ba55be52d5878da1
